@@ -1,3 +1,5 @@
+* For each clue grp display when it has been gained
+
 rel 0.2.2
 * Fix order of clue groups that are gained at single moment
 * Fix PHP session configuration
